Add web server and serve static pages